<resources>
    <string name="app_name">YOUR ROUTINES AND PROJECTS</string>
    <string name="projects">PROJECTS</string>
    <string name="routines">ROUTINES</string>
    <string name="weekly_review">WEEKLY REVIEW</string>
    <string name="this_week_s_work">THIS WEEK\'S WORK</string>
    <string name="select_what_to_work_on">SELECT WHAT TO WORK ON</string>
    <string name="main_page_welcome">WELCOME!</string>
    <string name="title_activity_routine_home">RoutineHome</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>