<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:background="@color/colorAccent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="26dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainPageWelcomeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/main_page_welcome"
        android:textColor="@color/backgroundColor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/select_what_to_work_on"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:orientation="vertical"
            android:padding="25sp">

            <Button
                android:id="@+id/yrapSelectProjects"
                android:layout_width="match_parent"
                android:paddingVertical="10sp"
                android:paddingHorizontal="45sp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:onClick="onGoSomewhere"
                android:text="@string/projects"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/yrapSelectRoutines"
                android:layout_width="match_parent"
                android:paddingVertical="10sp"
                android:paddingHorizontal="45sp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:onClick="onGoSomewhere"
                android:text="@string/routines"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/yrapSelectWeeklyReview"
                android:layout_width="match_parent"
                android:paddingVertical="10sp"
                android:paddingHorizontal="45sp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:onClick="onGoSomewhere"
                android:text="@string/weekly_review"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/yrapSelectWeeksWork"
                android:layout_width="match_parent"
                android:paddingVertical="10sp"
                android:paddingHorizontal="40sp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:onClick="onGoSomewhere"
                android:text="@string/this_week_s_work"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>